--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,10 @@
 {
-  "database": {
-    "rules": "database.rules.json"
+  "hosting": {
+    "public": "dist/snapchat",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
